...
            }}
          />
          <Stack.Screen
            name="EditDietaryProfile"
            component={EditDietaryProfileScreen}
            options={{
              headerTitle: "Edit Preferences",
              presentation: "modal",
            }}
          />
          <Stack.Screen
            name="FeaturedRecipeDetail"
            component={FeaturedRecipeDetailScreen}
...
